Updated UI for dashboard

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<nb-layout>
+  <nb-layout-column class="sidebar">
+    <app-sidebar></app-sidebar>
+  </nb-layout-column>
+  <nb-layout-column class="chat">
+    <app-chat></app-chat>
+  </nb-layout-column>
+</nb-layout>
