Updated UI for contact list

--- a/src/app/components/dashboard/sidebar/contact-list/contact-list.component.html
+++ b/src/app/components/dashboard/sidebar/contact-list/contact-list.component.html
@@ -1,1 +1,8 @@
-<p>contact-list works!</p>
+<nb-card>
+  <nb-list>
+    <nb-list-item *ngFor="let user of contacts">
+      <nb-user [name]="user.name">
+      </nb-user>
+    </nb-list-item>
+  </nb-list>
+</nb-card>
