Updated utilities row with ui and functionality

--- a/src/app/components/dashboard/sidebar/utilities-row/utilities-row.component.html
+++ b/src/app/components/dashboard/sidebar/utilities-row/utilities-row.component.html
@@ -1,1 +1,5 @@
-<p>utilities-row works!</p>
+<nb-actions>
+  <nb-action (click)="openWindow()" icon="plus-square-outline"></nb-action>
+  <nb-action [routerLink]="['/account']" icon="person-outline"></nb-action>
+  <nb-action icon="settings-outline"></nb-action>
+</nb-actions>
