--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -1,1 +1,11 @@
-<p>sidebar works!</p>
+<nb-layout>
+  <nb-layout-header>
+    <h2>mercury</h2>
+  </nb-layout-header>
+  <nb-layout-column>
+    <app-contact-list></app-contact-list>
+  </nb-layout-column>
+  <nb-layout-footer>
+    <app-utilities-row></app-utilities-row>
+  </nb-layout-footer>
+</nb-layout>
