--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.nb-theme-dark nb-layout .layout .layout-container .content .columns nb-layout-column {
+  padding: 0 !important;
+}
