Fixed chat height bug

--- a/src/app/components/dashboard/chat/chat.component.html
+++ b/src/app/components/dashboard/chat/chat.component.html
@@ -1,4 +1,4 @@
-<nb-chat title="Chat room 1">
+<nb-chat title="Chat room 1" scrollBottom="true" size="giant">
   <nb-chat-message
     *ngFor="let msg of messages"
     [type]="msg.type"
