--- a/src/app/components/dashboard/chat/chat.component.html
+++ b/src/app/components/dashboard/chat/chat.component.html
@@ -1,16 +1,12 @@
-<nb-chat title="Chat room 1" scrollBottom="true" size="giant">
+<nb-chat *ngIf="(chatRoom$ | async) as chatRoom" [title]="chatRoom.name" scrollBottom="true" size="giant">
   <nb-chat-message
     *ngFor="let msg of messages"
-    [type]="msg.type"
-    [message]="msg.text"
-    [reply]="msg.reply"
-    [sender]="msg.user.name"
-    [date]="msg.date"
-    [files]="msg.files"
-    [quote]="msg.quote"
-    [latitude]="msg.latitude"
-    [longitude]="msg.longitude"
-    [avatar]="msg.user.avatar"
+    [type]="msg!.type!"
+    [message]="msg!.text!"
+    [sender]="msg!.user!.name!"
+    [date]="msg!.date!"
+    [files]="msg!.files ? msg!.files! : []"
+    [avatar]="msg!.user!.avatar!"
   >
   </nb-chat-message>
   <nb-chat-form (send)="sendMessage($event)" [dropFiles]="true"></nb-chat-form>
