--- a/src/app/auth/components/sign-up/sign-up.component.css
+++ b/src/app/auth/components/sign-up/sign-up.component.css
@@ -4,10 +4,30 @@ nb-layout-column {
   align-self: center;
 }
 
-form > *{
+nb-step > * {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.centered-div {
   display: flex;
   flex-direction: column;
-  align-items: center !important;
-  margin: 1rem;
-  padding: 0
+  align-items: center;
+  margin: 1rem 1rem 0 1rem;
+}
+
+.outside {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.outside > p {
+  margin-top: 0;
+}
+
+.outside > span {
+  margin: 1rem 0;
 }
