Implemented forget password UI and functionality

--- a/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -1,19 +1,21 @@
-<div class="displayTable">
-  <div class="displayTableCell">
-    <div class="authBlock">
-      <h3>Reset Password</h3>
-      <p class="text-center">Please enter your email address to request a password reset.</p>
-      <div class="formGroup">
-        <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
-      </div>
-      <!-- Calling ForgotPassword from AuthService Api -->
-      <div class="formGroup">
-        <input type="submit" class="btn btnPrimary" value="Reset Password"
-               (click)="authService.ForgotPassword(passwordResetEmail.value)">
-      </div>
-    </div>
-    <div class="redirectToLogin">
-      <span>Go back to ? <a class="redirect" routerLink="/auth">Log In</a></span>
-    </div>
-  </div>
-</div>
+<nb-layout center="true">
+  <nb-layout-column>
+    <nb-card>
+      <nb-card-header>
+        <h4>Reset password</h4>
+      </nb-card-header>
+      <nb-card-body>
+        <p class="text-center">Please enter your email address to request a password reset.</p>
+        <form [formGroup]="form" (ngSubmit)="reset(email.value)">
+          <nb-form-field>
+            <input type="email" placeholder="Email" nbInput #email required>
+          </nb-form-field>
+          <div>
+            <button nbButton status="primary" type="submit">Reset</button>
+          </div>
+          <span>Go back to Log in <a class="redirect" routerLink="/auth">Sign In</a></span>
+        </form>
+      </nb-card-body>
+    </nb-card>
+  </nb-layout-column>
+</nb-layout>
