--- a/src/app/auth/components/sign-in/sign-in.component.css
+++ b/src/app/auth/components/sign-in/sign-in.component.css
@@ -4,10 +4,22 @@ nb-layout-column {
   align-self: center;
 }
 
-form > *{
+form > * {
   display: flex;
   flex-direction: column;
   align-items: center !important;
   margin: 1rem;
   padding: 0
+}
+
+.alternatives {
+  display: flex;
+  flex-direction: column;
+  align-items: center !important;
+  margin: 1rem;
+  padding: 5px;
+}
+
+.or {
+  margin-top: 0;
 }
