--- a/src/app/components/dashboard/sidebar/utilities-row/utilities-row.component.html
+++ b/src/app/components/dashboard/sidebar/utilities-row/utilities-row.component.html
@@ -1,5 +1,5 @@
 <nb-actions>
   <nb-action (click)="openWindowChatRoom()" icon="plus-square-outline"></nb-action>
   <nb-action [routerLink]="['/account']" icon="person-outline"></nb-action>
-  <nb-action (click)="openWindowStegano()" icon="settings-outline"></nb-action>
+  <nb-action (click)="openWindowStegano()" icon="file-text-outline"></nb-action>
 </nb-actions>
