--- a/src/app/components/dashboard/chat/chat.component.css
+++ b/src/app/components/dashboard/chat/chat.component.css
@@ -1,3 +1,15 @@
 nb-chat {
   min-height: 100vh !important;
 }
+
+.container {
+  position: relative;
+
+}
+
+nb-action {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 999;
+}
